syntax = "proto3";

package proto;

option java_package = "org.pinak.sub.model";
option java_outer_classname = "ResponseMessageProto";

message ResponseMessage {
   string message = 1;
}
