syntax = "proto3";

package proto;

option java_package = "org.pinak.sub.model";
option java_outer_classname = "RunRequestProto";

message RunRequest {
   int64 clientId = 1;
}
