syntax = "proto3";

package proto;

option java_package = "org.pinak.sub.model";
option java_outer_classname = "SyncRequestProto";

message SyncRequest {
   int64 clientId = 1;
}
